// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseSelectionList > Rendering and Structure > should render the selection indicator (● or space) and layout 1`] = `
"● 1. Item A
  2. Item B
  3. Item C"
`;

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should apply full-width highlight and offset when horizontally shifted 1`] = `
"● 1. Item A
  2. Item B
  3. Item C"
`;

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should not show arrows when list fits entirely 1`] = `
"● 1. Item A
  2. Item B
  3. Item C
"
`;

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should show arrows and correct items when scrolled to the end 1`] = `
"▲
   8. Item 8
   9. Item 9
● 10. Item 10
▼
"
`;

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should show arrows and correct items when scrolled to the middle 1`] = `
"▲
   4. Item 4
   5. Item 5
●  6. Item 6
▼
"
`;

exports[`BaseSelectionList > Scroll Arrows (showScrollArrows) > should show arrows with correct colors when enabled (at the top) 1`] = `
"▲
●  1. Item 1
   2. Item 2
   3. Item 3
▼
"
`;
